--- a/pom.xml
+++ b/pom.xml
@@ -13,15 +13,12 @@
     <log4j2.version>2.20.0</log4j2.version>
     <allure.version>2.23.0</allure.version>
     <aspectj.version>1.9.19</aspectj.version>
+    <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
+  	<maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
   </properties>
   
   <dependencies>
-	<dependency>
-	  <groupId>org.slf4j</groupId>
-	  <artifactId>slf4j-simple</artifactId>
-	  <version>2.0.12</version>
-	</dependency>
-
+	
     <!-- Selenium WebDriver -->
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
@@ -95,66 +92,68 @@
       <artifactId>aspectjrt</artifactId>
       <version>${aspectj.version}</version>
     </dependency>
+    
+    <!-- Cucumber dependencies for BDD -->
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-java</artifactId>
+      <version>7.27.2</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-testng</artifactId>
+      <version>7.27.1</version>
+    </dependency>
   </dependencies>
   
   <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
-        <configuration>
-          <source>11</source>
-          <target>11</target>
-        </configuration>
-      </plugin>
-      
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.2.2</version>
-        <configuration>
-          <suiteXmlFiles>
-            <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
-          </suiteXmlFiles>
-          <argLine>
-            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-          </argLine>
-          <systemProperties>
-            <property>
-              <name>allure.results.directory</name>
-              <value>${project.build.directory}/allure-results</value>
-            </property>
-          </systemProperties>
-        </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-            <version>${aspectj.version}</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-      
-      <!-- Allure Maven Plugin -->
-      <plugin>
-        <groupId>io.qameta.allure</groupId>
-        <artifactId>allure-maven</artifactId>
-        <version>2.12.0</version>
-        <configuration>
-          <reportVersion>${allure.version}</reportVersion>
-          <allureDownloadUrl>https://github.com/allure-framework/allure2/releases/download/2.23.0/allure-2.23.0.zip</allureDownloadUrl>
-        </configuration>
-        <executions>
-          <execution>
-            <id>allure-report</id>
-            <phase>test</phase>
-            <goals>
-              <goal>report</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+  <plugins>
+    <!-- Compiler Plugin -->
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>${maven-compiler-plugin.version}</version>
+      <configuration>
+        <source>${maven.compiler.source}</source>
+        <target>${maven.compiler.target}</target>
+      </configuration>
+    </plugin>
+
+    <!-- Surefire Plugin -->
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>${maven-surefire-plugin.version}</version>
+      <configuration>
+        <suiteXmlFiles>
+          <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+        </suiteXmlFiles>
+      </configuration>
+    </plugin>
+
+    <!-- Allure Maven Plugin 
+    <plugin>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-maven</artifactId>
+      <version>2.12.1</version>
+      <configuration>
+        <reportVersion>${allure.version}</reportVersion>
+        <allureDownloadUrl>
+          https://github.com/allure-framework/allure2/releases/download/2.23.0/allure-2.23.0.zip
+        </allureDownloadUrl>
+      </configuration>
+      <executions>
+        <execution>
+          <id>allure-report</id>
+          <phase>test</phase>
+          <goals>
+            <goal>report</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>-->
+  </plugins>
+</build>
+
 </project>
